Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
1
-
90c90d507 (dev), 3e67c1241 (6.9), adb2ca107 (6.8)
-
Foundation Sprint 128
Description
Missing some feature guards
Attachments
For Gerrit Dashboard: QTBUG-135230 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
634895,5 | Put qxmlstreamreader code behind its feature-flag | dev | qt/qtbase | Status: MERGED | +2 | 0 |
635926,2 | Put qxmlstreamreader code behind its feature-flag | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
636210,4 | Put qxmlstreamreader code behind its feature-flag | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |